# vk_guide_rs

./: Cargo.toml  README.md
debug/: renderdoc.sh
setup/: compile_shaders.sh  compile_shaders_windows.ps1
shaders/: sky.comp
src/: main.rs  tests.rs  vk_bootstrap.rs  vk_compute.rs  vk_debug.rs  vk_descriptors.rs  vk_engine.rs  vk_images.rs  vk_init.rs  vk_loader.rs  vk_pipelines.rs  vk_types.rs
src/vk_bootstrap/: device.rs  mod.rs
src/vk_debug/: mod.rs
src/vk_engine/: destructors.rs  frame_data.rs  immediate.rs  internal_init.rs  mod.rs
src/vk_types/: buffers.rs  gpu_draw_push_constants.rs  gpu_mesh_buffers.rs  mod.rs  vertex.rs
