[package]
name = "vk_guide_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ash = { version = "0.37.3", features = ["linked"] }
cfg-if = "1.0.0"
cgmath = { version = "0.18.0", features = ["mint"] }
gltf = "1.4.0"
gpu-allocator = "0.25.0"
imgui = "0.11.0"
imgui-rs-vulkan-renderer = { version = "1.12.0", features = ["dynamic-rendering", "gpu-allocator"] }
imgui-sdl2 = "0.15.3"
log = "0.4.20"
mint = "0.5.9"
presser = "0.3.1"
pretty_env_logger = "0.5.0"
raw-window-handle = "0.6.0"
sdl2 = { version = "0.36.0", features = ["raw-window-handle"] }
stb_image = "0.3.0"
thiserror = "1.0.56"
tobj = "4.0.1"
